--- a/scss/_banner-first.scss
+++ b/scss/_banner-first.scss
@@ -6,22 +6,22 @@
   background-repeat: no-repeat;
 
   &-content {
-    margin-left: 75px;
+    margin-left: 59px;
 
     &-heading {
-      margin-top: 60px;
-      height: 61px;
-      font-size: 50px;
-      line-height: 61px;
+      margin-top: 10px;
+      height: 58px;
+      font-size: 47px;
+      line-height: 58px;
       letter-spacing: -0.05em;
       color: $color_banner1_heading;
     }
 
     &-bold {
-      height: 61px;
+      height: 58px;
       font-weight: bold;
-      font-size: 50px;
-      line-height: 61px;
+      font-size: 47px;
+      line-height: 58px;
       letter-spacing: -0.05em;
       color: $color_banner1_heading;
     }
