--- a/scss/_chatbox.scss
+++ b/scss/_chatbox.scss
@@ -43,6 +43,8 @@
 
     img {
       width: 100%;
+      border: 1px solid $cl-bd-lg;
+      border-radius: 50%;
     }
   }
 
